--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,6 @@ body {
 }
 
 .container {
-  min-height: 1000px;
   max-width: 100vw;
 }
 
